--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav>
       <div class="nav-container">
-        <a href="#" class="logo">ICDSCI 2024</a>
+        <a href="#" class="logo">ICDSCI 2025</a>
         <ul class="nav-links">
           <li><a style="color: white;" href="#home">Home</a></li>
           <li><a style="color: white;" href="#about">About</a></li>
@@ -21,36 +21,32 @@
     </nav>
 
     <header id="home" style="background-color: #1f1e1e;">
-      <div class="content-wrapper">
-        <div class="image-container">
-          <img src="img2.jpeg" alt="Sample Image" />
-        </div>
-        <div class="info-container">
-          <div style="background-color: #4caf50; padding: 30px;">
-            <h1>
-              International Conference on Data Science, Communication and
-              Computational Technologies (AICCT) 2024
+      <div>
+          <div style="background-color: #4caf50; padding: 30px  ">
+              <div style="margin-left: 300px;"><img style="padding-top: 40px;" class="imgc" src="pscmr.png" alt="Sample Image" /></div>
+            <h1 >
+                International Conference on Date Science and Computational Intelligence 
             </h1>
-            <h2>July 25-27, 2024</h2>
+            <h2>March 20-21, 2025</h2>
             <div></div>
-            <h2><u>Conference Proceedings</u></h2>
+            <h2 style="color: black;"><u>Conference Proceedings</u></h2> <br>
             <h3>
               ALL ACCEPTED & PRESENTED papers will be published in SCOPUS
               indexed SPRINGER PROMS.
             </h3>
             <div>
-              <img src="springer.png" alt="" />
-              <img src="bg2.jpg" alt="" />
+              <img height="150px" width="150px" src="springer.png" alt="" />
+              <img height="150px" width="150px" src="bg2.jpg" alt="" />
             </div>
-            <button class="button">Submit Your Paper</button>
+            <div style="margin-left: 500px;"><button class="button">Submit Your Paper</button></div>
           </div>
-        </div>
+ 
       </div>
     </header>
 
     <section id="conference" >
       <h2>About the Conference</h2>
-      <p>
+      <p>`
         The International Conference on Data Science and Artificial Intelligence
         (ICDSAI) 2024 is a pivotal event that embodies the core elements of the
         5th Industrial Revolution. The widespread application of data science is
@@ -112,9 +108,9 @@
       </div>
     </section>
 
-    <section class="background">
+    <section class="background3">
         <div class="grid-container">
-          <h1 style="text-align: center;">Deadlines</h1>
+          <p class="headf" style="font-size: xx-large; font-weight: bold; ">Deadlines</p>
         <div class="zigzag-container">
           <div class="zigzag-item left">
             <h3>Deadline 1</h3>
@@ -147,7 +143,7 @@
     <section
       id="new-section"
       class="background2"
-      style="background-color: gray"
+      
     >
       <div class="grid-container2">
         <!-- <h1>Indexing</h1>
@@ -192,93 +188,88 @@
     </div> -->
 
     <div style="background-color: #4caf50;">
-      <h1 style="text-align: center;">Conference Tracks</h1>
+      <h1 style="color: black; margin-left: 500px;">Conference Tracks</h1>
       <div class="outer-div">
         <div class="conf-div">
             <h2>Data Science Foundations:</h2>
-            <p>Statistical learning theory</p>
-            <p>Data mining techniques</p>
-            <p>Big data analytics</p>
-            <p>Machine learning algorithms</p>
-            <p>Deep learning techniques</p>
+            <p>-Statistical learning theory</p>
+            <p>-Data mining techniques</p>
+            <p>-Big data analytics</p>
+            <p>-Machine learning algorithms</p>
+            <p>-Deep learning techniques</p>
 
         </div>
         <div class="conf-div">
-            <h2>Data Science Foundations:</h2>
-            <p>Statistical learning theory</p>
-            <p>Data mining techniques</p>
-            <p>Big data analytics</p>
-            <p>Machine learning algorithms</p>
-            <p>Deep learning techniques</p>
-
+            <h2>Computational Intelligence:</h2>
+                <p>-Evolutionary computation</p>
+                <p>-Neural networks</p>
+                <p>-Fuzzy systems</p>
+                <p>-intelligence</p>
+                <p>-Genetic algorithms</p>
         </div>
         <div class="conf-div">
-            <h2>Data Science Foundations:</h2>
-            <p>Statistical learning theory</p>
-            <p>Data mining techniques</p>
-            <p>Big data analytics</p>
-            <p>Machine learning algorithms</p>
-            <p>Deep learning techniques</p>
+            <h2>Applications of Data Science:</h2>
+            <p>-Statistical learning theory</p>
+            <p>-Data mining techniques</p>
+            <p>-Big data analytics</p>
+            <p>-Machine learning algorithms</p>
+            <p>-Deep learning techniques</p>
 
         </div>
     </div>
       <div class="outer-div">
         <div class="conf-div">
-            <h2>Data Science Foundations:</h2>
-            <p>Statistical learning theory</p>
-            <p>Data mining techniques</p>
-            <p>Big data analytics</p>
-            <p>Machine learning algorithms</p>
-            <p>Deep learning techniques</p>
+            <h2>Computational intelligence</h2><br><h2>applications:</h2>
+                 <p>-Robotics and autonomous systems.</p>
+                 <p>-Decision support systems</p>        
+                 <p>-Optimization problems</p>
+                 <p>-Computational neuroscience</p>
+                 <p>-Intelligent control</p>
+        </div>
+        <div class="conf-div">
+            <h2>Data Science and Al Ethics:</h2>
+                <p>-Privacy and security in data analytics</p>
+                <p>-Fairness and transparency in Al</p>
+                <p>-Ethical considerations in big data research</p>
 
         </div>
         <div class="conf-div">
-            <h2>Data Science Foundations:</h2>
-            <p>Statistical learning theory</p>
-            <p>Data mining techniques</p>
-            <p>Big data analytics</p>
-            <p>Machine learning algorithms</p>
-            <p>Deep learning techniques</p>
-
-        </div>
-        <div class="conf-div">
-            <h2>Data Science Foundations:</h2>
-            <p>Statistical learning theory</p>
-            <p>Data mining techniques</p>
-            <p>Big data analytics</p>
-            <p>Machine learning algorithms</p>
-            <p>Deep learning techniques</p>
-
+            <h2>Data Visualization and </h2><br><h2>Interpretation:</h2>
+            <p>-Visual analytics</p>
+            <p>-Interactive data exploration</p>
+            <p>-Interpretability of machine learning models</p>
         </div>
     </div>
       <div class="outer-div">
         <div class="conf-div">
-            <h2>Data Science Foundations:</h2>
-            <p>Statistical learning theory</p>
-            <p>Data mining techniques</p>
-            <p>Big data analytics</p>
-            <p>Machine learning algorithms</p>
-            <p>Deep learning techniques</p>
+            <h2>Cloud Computing and</h2><br><h2>Virtualization:</h2>
+            <p>-Cloud service models</p>
+            <p>-Containerization technologies</p>
+            <p>-Serverless computing and functions-as-a</p><p>-service</p>
+        </div>
+        <div class="conf-div">
+            <h2>Software Engineering </h2> <br> <h2>Practices:</h2></h2>
+            <p>-Agile methodologies and DevOps practices</p>
+            <p>-Software testing and quality assurance</p>
+            <p>-Software architecture and design pattems</p>
 
         </div>
         <div class="conf-div">
-            <h2>Data Science Foundations:</h2>
-            <p>Statistical learning theory</p>
-            <p>Data mining techniques</p>
-            <p>Big data analytics</p>
-            <p>Machine learning algorithms</p>
-            <p>Deep learning techniques</p>
-
-        </div>
-        <div class="conf-div">
-            <h2>Data Science Foundations:</h2>
-            <p>Statistical learning theory</p>
-            <p>Data mining techniques</p>
-            <p>Big data analytics</p>
-            <p>Machine learning algorithms</p>
-            <p>Deep learning techniques</p>
-
+            <h2>Emerging Trends:</h2>
+            <p>-Quantum computing and data science</p>
+            <p>-Edge computing for data analytics</p>
+            <p>-Blockchain and Al</p>
         </div>
     </div>
+    <div class="outer-div">
+        <div class="conf-div">
+            <h2>Industry Applications:</h2>
+            <p>-Financial analytics</p>
+            <p>-Heathcare informatics</p>
+            <p>-Industrial IoT appications</p>
+            <p>-Smart c and arbian analytics</p>
+        </div>
+    </div>
+    
   </body>
 </html>
