--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav>
       <div class="nav-container">
-        <a href="#" class="logo">ICDSCI 2025</a>
+        <a href="#" class="logo"><span>ICDSCI</span> 2025</a>
         <ul class="nav-links">
           <li><a style="color: white;" href="#home">Home</a></li>
           <li><a style="color: white;" href="#about">About</a></li>
@@ -25,7 +25,7 @@
           <div style="background-color: #4caf50; padding: 30px  ">
               <div style="margin-left: 300px;"><img style="padding-top: 40px;" class="imgc" src="pscmr.png" alt="Sample Image" /></div>
             <h1 >
-                International Conference on Date Science and Computational Intelligence 
+                International Conference on Date Science and Computational Intelligence(ICDSCI)
             </h1>
             <h2>March 20-21, 2025</h2>
             <div></div>
@@ -113,28 +113,32 @@
           <p class="headf" style="font-size: xx-large; font-weight: bold; ">Deadlines</p>
         <div class="zigzag-container">
           <div class="zigzag-item left">
-            <h3>Deadline 1</h3>
-            <p>Details about deadline 1.</p>
+            <h3 >Manuscript submissions open: </h3>
+            <p>September 1, 2024</p>
           </div>
           <div class="zigzag-item right">
-            <h3>Deadline 2</h3>
-            <p>Details about deadline 2.</p>
+            <h3>Deadline for Manuscript submissions: </h3>
+            <p>December 15,2024</p>
           </div>
           <div class="zigzag-item left">
-            <h3>Deadline 3</h3>
-            <p>Details about deadline 3.</p>
+            <h3>Initial review and feedback:</h3>
+            <p>December 15, 2024 - January 31,2025</p>
           </div>
           <div class="zigzag-item right">
-            <h3>Deadline 4</h3>
-            <p>Details about deadline 4.</p>
+            <h3>Notification of acceptance:</h3>
+            <p>February 15, 2025</p>
           </div>
           <div class="zigzag-item left">
-            <h3>Deadline 5</h3>
-            <p>Details about deadline 5.</p>
+            <h3>Final revised manuscripts due: </h3>
+            <p>March 1, 2025</p>
           </div>
           <div class="zigzag-item right">
-            <h3>Deadline 6</h3>
-            <p>Details about deadline 6.</p>
+            <h3>Author registration deadline:</h3>
+            <p>March 7, 2025</p>
+          </div>
+          <div class="zigzag-item left">
+            <h3>Conference program finalized:</h3>
+            <p>March 2, 2025</p>
           </div>
         </div>
       </div>
@@ -187,7 +191,7 @@
       </p>
     </div> -->
 
-    <div style="background-color: #4caf50;">
+    <div style="background-color: #f2f5f2;">
       <h1 style="color: black; margin-left: 500px;">Conference Tracks</h1>
       <div class="outer-div">
         <div class="conf-div">
